--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -48,13 +49,14 @@ p {
   margin: 40px 0;
 }
 
+
 body {
   width: 100%;
 }
 
-/* Header page */ 
+/* Header page */
 
-#header{
+#header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -67,19 +69,19 @@ body {
   left: 0;
 }
 
-#navlist{
+#navlist {
   display: flex;
   align-content: center;
   justify-content: center;
 }
 
-#navlist li{
+#navlist li {
   list-style: none;
   padding: 0 20px;
   position: relative;
 }
 
-#navlist li a{
+#navlist li a {
   text-decoration: none;
   font-size: 16px;
   font-weight: 600;
@@ -88,13 +90,13 @@ body {
 }
 
 #navlist li a:hover,
-#navlist li a.active{
+#navlist li a.active {
   color: #088178;
 }
 
 #navlist li a.active::after,
-#navlist li a:hover::after{
-  content:"";
+#navlist li a:hover::after {
+  content: "";
   width: 30%;
   height: 2px;
   background: #088178;
@@ -103,9 +105,17 @@ body {
   left: 20px;
 }
 
+#close {
+  display: none;
+}
+
+#mobile {
+  display: none;
+}
+
 /* Home page */
 
-#hero{
+#hero {
   height: 90vh;
   width: 100%;
   background-image: url("img/hero4.png");
@@ -118,15 +128,15 @@ body {
   justify-content: center;
 }
 
-#hero h4{
+#hero h4 {
   padding: 15px;
 }
 
-#hero h1{
+#hero h1 {
   color: #088178;
 }
 
-#hero button{
+#hero button {
   background-image: url(img/button.png);
   background-color: transparent;
   color: #088178;
@@ -138,33 +148,33 @@ body {
   font-size: 15px;
 }
 
-#feature{
+#feature {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
+
 }
 
-#feature .fe-box{
+#feature .fe-box {
   width: 180px;
   text-align: center;
   padding: 25px 15px;
   box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
   border: 1px solid #cce7d0;
-  border-radius: 4px ;
+  border-radius: 4px;
   margin: 15px 0;
 }
 
-#feature .fe-box:hover{
+#feature .fe-box:hover {
   box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
 }
 
-#feature .fe-box img{
+#feature .fe-box img {
   width: 100%;
   margin-bottom: 10px;
 }
 
-#feature .fe-box h6{
+#feature .fe-box h6 {
   display: inline-block;
   padding: 9px 8px 6px 8px;
   line-height: 1;
@@ -173,31 +183,31 @@ body {
   background-color: #fddde4;
 }
 
-#feature .fe-box:nth-child(2) h6{
-  background-color:  #cdebbc;
+#feature .fe-box:nth-child(2) h6 {
+  background-color: #cdebbc;
 }
 
-#feature .fe-box:nth-child(3) h6{
-  background-color:  #d1e8f2;
+#feature .fe-box:nth-child(3) h6 {
+  background-color: #d1e8f2;
 }
 
-#feature .fe-box:nth-child(4) h6{
-  background-color:  #cdd4f8;
+#feature .fe-box:nth-child(4) h6 {
+  background-color: #cdd4f8;
 }
 
-#feature .fe-box:nth-child(5) h6{
-  background-color:  #f6dbf6;
+#feature .fe-box:nth-child(5) h6 {
+  background-color: #f6dbf6;
 }
 
-#feature .fe-box:nth-child(6) h6{
-  background-color:  #fff2e5;
+#feature .fe-box:nth-child(6) h6 {
+  background-color: #fff2e5;
 }
 
-#products{
+#products {
   text-align: center;
 }
 
-#products .pro{
+#products .pro {
   width: 23%;
   min-width: 250px;
   padding: 10px 12px;
@@ -210,44 +220,44 @@ body {
   position: relative;
 }
 
-#products .pro:hover{
+#products .pro:hover {
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
 }
 
-#products .pro img{
+#products .pro img {
   width: 100%;
   border-radius: 20px;
 }
 
-#products .pro .description{
+#products .pro .description {
   text-align: start;
   padding: 10px 0;
 }
 
-#products .pro .description span{
+#products .pro .description span {
   color: #606063;
   font-size: 12px;
 }
 
-#products .pro .description h5{
+#products .pro .description h5 {
   padding-top: 7px;
   color: #1a1a1a;
   font-size: 14px;
 }
 
-#products .pro .description i{
+#products .pro .description i {
   font-size: 12px;
   color: rgba(243, 181, 25);
 }
 
-#products .pro .description h4{
+#products .pro .description h4 {
   padding-top: 7px;
   font-size: 15px;
   font-weight: 700;
   color: #088178;
 }
 
-#products .pro .cart{
+#products .pro .cart {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -264,10 +274,621 @@ body {
   justify-content: center;
 }
 
-#products .pro-container{
+#products .pro-container {
   padding: 40px 80px;
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
   flex-wrap: wrap;
+}
+
+#banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-image: url(img/banner/b2.jpg);
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  background-color: center;
+}
+
+#banner .section-m1 h4 {
+  color: #fff;
+  font-size: 16px;
+}
+
+#banner .section-m1 h2 {
+  color: #fff;
+  font-size: 30px;
+  padding: 10px 0;
+}
+
+#banner .section-m1 h2 span {
+  color: #ef3636;
+}
+
+#banner .section-m1 .normal {
+  font-size: 14px;
+  font-weight: 600;
+  padding: 15px 30px;
+  color: #000;
+  background-color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: 0.2s;
+}
+
+.banner-box .white {
+  font-size: 13px;
+  font-weight: 600;
+  padding: 11px 18px;
+  color: #fff;
+  background-color: transparent;
+  cursor: pointer;
+  border: 1px solid #fff;
+  outline: none;
+  transition: 0.02s;
+}
+
+#banner .section-m1 button:hover {
+  background: #088178;
+  color: #fff;
+}
+
+#sm-banner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#sm-banner .banner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url(img/banner/b17.jpg);
+  min-width: 630px;
+  height: 50vh;
+  background-size: cover;
+  background-position: center;
+  /*background-repeat: no-repeat;*/
+
+  /*background-color: center;*/
+  padding: 30px;
+}
+
+#sm-banner .banner-box2 {
+  background-image: url(img/banner/b10.jpg);
+}
+
+.banner-box h4 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.banner-box h2 {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 800;
+}
+
+.banner-box span {
+  color: #fff;
+  font-size: 14pxpx;
+  font-weight: 500;
+  padding-bottom: 15px;
+}
+
+#sm-banner .banner-box:hover button {
+  background: #088178;
+  border: 1px solid #088178;
+}
+
+#banner3 {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 80px;
+}
+
+
+#banner3 .banner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url(img/banner/b7.jpg);
+  min-width: 30%;
+  height: 30vh;
+  background-size: cover;
+  background-position: center;
+  /*background-repeat: no-repeat;*/
+
+  /*background-color: center;*/
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+#banner3 .banner-box2 {
+  background-image: url(img/banner/b4.jpg);
+}
+
+#banner3 .banner-box3 {
+  background-image: url(img/banner/b18.jpg);
+}
+
+#banner3 h2 {
+  color: #fff;
+  font-weight: 900;
+  font-size: 22px;
+}
+
+#banner3 h3 {
+  color: #ec544e;
+  font-weight: 800;
+  font-size: 15px;
+}
+
+#newsletter {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  background-image: url(img/banner/b14.png);
+  background-repeat: no-repeat;
+  background-position: 20%30%;
+  background-color: #041e42;
+}
+
+#newsletter h4 {
+  font-size: 22px;
+  font-weight: 700;
+  color: #fff;
+}
+
+#newsletter p {
+  font-size: 14px;
+  font-weight: 600;
+  color: #818ea0;
+}
+
+#newsletter p span {
+  color: #ffbd27;
+}
+
+#newsletter .form {
+  display: flex;
+  width: 40%;
+}
+
+#newsletter input {
+  height: 3.125rem;
+  padding: 0 1.25em;
+  font-size: 14px;
+  width: 100%;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  outline: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  margin-right: 20px;
+}
+
+#newsletter button {
+  width: 40%;
+  background-color: #088178;
+  color: #fff;
+  white-space: nowrap;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+footer {
+  display: flex;
+  flex-direction: wrap;
+  justify-content: space-between;
+}
+
+footer .col {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+footer .logo {
+  margin-bottom: 30px;
+}
+
+footer h4 {
+  font-size: 14px;
+  padding-bottom: 20px;
+}
+
+footer p {
+  font-size: 13px;
+  margin: 0 0 8px 0;
+}
+
+footer a {
+  font-size: 13px;
+  color: #222;
+  text-decoration: none;
+  margin-bottom: 10px;
+}
+
+footer .follow i {
+  color: #465B52;
+  padding-right: 4px;
+  cursor: pointer;
+}
+
+footer .install .row img {
+  border: 1px solid #088178;
+  border-radius: 6px;
+}
+
+
+footer .intall img {
+  margin: 10px 0 15px 0;
+}
+
+footer .follow i:hover,
+footer a:hover {
+  color: #088178;
+}
+
+.copyright {
+  width: 100%;
+  text-align: center;
+}
+
+
+/*Shop page*/
+
+#prodetails{
+  display: flex;
+  margin-top: 20px;
+}
+
+#prodetails .single-pro-details{
+  width: 50%;
+  padding-top: 30px;
+}
+
+#prodetails .single-pro-details select {
+  display: block;
+  padding: 5px  10px;
+  margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input{
+  width: 50px;
+  height: 47px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+#prodetails .single-pro-details input:focus{
+  outline: none;
+}
+
+#prodetails .single-pro-details h4{
+  padding: 40px 0 20px 0;
+}
+
+#prodetails .single-pro-details h2{
+  font-size: 26px;
+}
+
+#prodetails .single-pro-details button {
+  background: #088178;
+  color: #fff;
+  padding: 15px 30px
+}
+
+#prodetails .single-pro-details span{
+  line-height: 25px;
+}
+
+#page-header{
+  background-image: url(img/banner/b1.jpg);
+  width: 100%;
+  height: 40vh;
+  background-size: cover ;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px;
+}
+
+#page-header h2,
+#page-header p{
+  color: #fff;
+}
+
+#pagination{
+  text-align: center;
+}
+#pagination a{
+  color: #fff;
+  text-decoration: none;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  font-weight: 600;
+}
+
+#pagination a i{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+/*single product*/
+#prodetails .single-pro-image{
+  width: 40%;
+  margin-right: 50px;
+}
+
+.small-img-group{
+  display: flex;
+  justify-content: space-between;
+}
+
+.small-img-col{
+  flex-basis:  24%;
+  cursor: pointer;
+}
+
+
+
+
+@media (max-width: 1200px) {
+
+  #feature {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  #feature .fe-box {
+    margin: 15px 0;
+  }
+
+  /* #products .pro-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 40px 0px;
+    justify-items: center;
+  }*/
+
+  #sm-banner {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+
+
+  #products .pro {
+    min-width: 200px;
+  }
+
+  #banner3 {
+    display: flex;
+    justify-content: space-around;
+    /* flex-wrap: wrap; */
+    padding: 0 80px;
+    flex-direction: column;
+  }
+
+  #banner3 .banner-box {
+    height: 50vh;
+  }
+
+}
+
+@media (max-width: 799px) {
+  .section-p1 {
+    padding: 40px 40px;
+  }
+
+  #navlist {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #e3e6f3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navlist.active {
+    right: 0px;
+  }
+
+  #navlist li {
+    margin-bottom: 25px;
+  }
+
+  #mobile {
+    display: flex;
+    text-decoration: none;
+  }
+
+  #mobile li {
+    list-style: none;
+    margin-right: 20px;
+  }
+
+  #mobile I {
+    color: #1a1a1a;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+
+  #close {
+    display: inline-block;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+
+  #lg-bag {
+    display: none;
+  }
+
+  #hero {
+    height: 70vh;
+    background-position: top 30% right 30%;
+    padding: 0 80px;
+
+  }
+
+  #feature {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+
+  #product1 .pro-container {
+    justify-content: center;
+  }
+
+  #product1 .pro {
+    margin: 15px
+  }
+
+  #banner {
+    height: 20vh;
+  }
+
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 40vh;
+  }
+
+  #banner3 {
+    padding: 0 40px;
+  }
+
+  #banner3 .banner-box {
+    width: 28%;
+  }
+
+  #newsletter .form {
+    width: 70%;
+  }
+
+  #banner3 .banner-box {
+    min-width: 100%;
+    height: 40vh;
+  }
+
+  footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 477px) {
+  #banner {
+    height: 40vh;
+  }
+
+  #newsletter .form {
+    width: 100%;
+  }
+
+  #products .pro-container {
+    justify-content: center;
+  }
+  #prodetails{
+    display: flex;
+    flex-direction: column;
+  }
+
+  #prodetails .single-pro-image{
+    width: 100%;
+    margin-right: 0px;
+  }
+  #prodetails .single-pro-details {
+    width: 100%;
+    padding-top: 30px;
+  }
+}
+
+  
+ 
+
+
+
+@media (max-width: 340px) {
+
+  
+  #header {
+    display: flex;
+    justify-content: center;
+  }
+
+  #products .pro-container {
+    justify-content: center;
+  }
+
+  #banner {
+    height: 40vh;
+  }
+
+  #sm-banner .banner-box {
+    height: 30vh;
+  }
+
+  .banner-box h4 {
+    color: #fff;
+    font-size: 10px;
+    font-weight: 300;
+
+  }
+
+  .banner-box h2 {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 800;
+  }
+
+  #banner3 .banner-box {
+    min-width: 100%;
+  }
+
+  #newsletter .form {
+    width: 100%;
+  }
+
+  #newsletter button {
+    width: 100%;
+  }
+
+  
 }
